resolve model error
